--- a/client/src/app/main/cvs/usermain/userMain.html
+++ b/client/src/app/main/cvs/usermain/userMain.html
@@ -1,24 +1,23 @@
-<div layout="row">
+
+    <div class="md-title pb-5">{{default}}</div>
+<div layout="row" ng-if="default == ''">
   <div flex="30">
     <span class="md-title">Companies Applied</span>
-    <h2>
-    {{default}}
-    </h2>
 
-<<<<<<< HEAD
-    <!-- <div class="title secondary-text">
+  <!-- <div class="title secondary-text">
       {{fname}}{{lname}}
     </div>
     <div class="event h2">
       {{fname}}{{lname}}
     </div> -->
+
     <ms-widget class="h-80" layout="column" flex="100" ng-if="company1 != null">
 
       <!-- Front -->
       <ms-widget-front class="p-10 white-bg" layout="row" flex>
         <div class="pt-5 pb-5" layout="column" layout-align="center center" flex>
           <div class="md-title pb-5">{{company1}}</div>
-          <!-- <div class="font-weight-500 secondary-text">{{vm.widget5.title}}</div> -->
+          <div class="font-weight-500 secondary-text">{{position1}}</div>
         </div>
       </ms-widget-front>
       <!-- / Front -->
@@ -31,20 +30,20 @@
       <ms-widget-front class="p-10 white-bg" layout="row" flex>
         <div class="pt-5 pb-5" layout="column" layout-align="center center" flex>
           <div class="md-title pb-5">{{company2}}</div>
-          <!-- <div class="font-weight-500 secondary-text">{{vm.widget5.title}}</div> -->
+          <div class="font-weight-500 secondary-text">{{position2}}</div>
         </div>
       </ms-widget-front>
       <!-- / Front -->
 
     </ms-widget>
 
-    <ms-widget class="h-80" layout="column" flex="100" ng-if="company3 != ''">
+    <ms-widget class="h-80" layout="column" flex="100" ng-if="company3 != null">
 
       <!-- Front -->
       <ms-widget-front class="p-10 white-bg" layout="row" flex>
         <div class="pt-5 pb-5" layout="column" layout-align="center center" flex>
           <div class="md-title pb-5">{{company3}}</div>
-          <!-- <div class="font-weight-500 secondary-text">{{vm.widget5.title}}</div> -->
+          <div class="font-weight-500 secondary-text">{{position3}}</div>
         </div>
       </ms-widget-front>
       <!-- / Front -->
@@ -57,7 +56,7 @@
       <ms-widget-front class="p-10 white-bg" layout="row" flex>
         <div class="pt-5 pb-5" layout="column" layout-align="center center" flex>
           <div class="md-title pb-5">{{company4}}</div>
-          <!-- <div class="font-weight-500 secondary-text">{{vm.widget5.title}}</div> -->
+          <div class="font-weight-500 secondary-text">{{position4}}</div>
         </div>
       </ms-widget-front>
       <!-- / Front -->
@@ -70,7 +69,7 @@
       <ms-widget-front class="p-10 white-bg" layout="row" flex>
         <div class="pt-5 pb-5" layout="column" layout-align="center center" flex>
           <div class="md-title pb-5">{{company5}}</div>
-          <!-- <div class="font-weight-500 secondary-text">{{vm.widget5.title}}</div> -->
+          <div class="font-weight-500 secondary-text">{{position5}}</div>
         </div>
       </ms-widget-front>
       <!-- / Front -->
@@ -83,7 +82,7 @@
       <ms-widget-front class="p-10 white-bg" layout="row" flex>
         <div class="pt-5 pb-5" layout="column" layout-align="center center" flex>
           <div class="md-title pb-5">{{company6}}</div>
-          <!-- <div class="font-weight-500 secondary-text">{{vm.widget5.title}}</div> -->
+          <div class="font-weight-500 secondary-text">{{position6}}</div>
         </div>
       </ms-widget-front>
       <!-- / Front -->
